--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -2,3 +2,12 @@ img{
     width: 150px;
     height: 150px;
 }
+
+.product{
+    height:150px;
+    border: solid 1px black
+}   
+
+.container{
+    transform: translateY(100%);
+}
