--- a/css/boto.css
+++ b/css/boto.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url('../images/bg.png');
+    background-image:url('http://asiaone.co.in/wp-content/uploads/2016/11/national-sports-day.jpg');
     font-family:'Roboto Mono'
 }
 
