--- a/css/landing.css
+++ b/css/landing.css
@@ -1,13 +1,20 @@
 body {
-    background-color: rgb(205, 231, 205);
+    background-color: rgb(198, 212, 198);
 }
-
+#root {
+    text-align: center;
+}
 .navbar {
     background-color: lightblue;
+    height: 100px;
+    margin-bottom: 50px;
+}
+.navbar-brand {
+    font-size: 3.25rem;
 }
 
 #btn-menu{
-    background-color: black;
+    background-color: white;
 }
 
 .container{
