--- a/css/landing.css
+++ b/css/landing.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(198, 212, 198);
+    background-image:url('http://asiaone.co.in/wp-content/uploads/2016/11/national-sports-day.jpg');
 }
 #root {
     text-align: center;
