--- a/css/boto.css
+++ b/css/boto.css
@@ -25,7 +25,7 @@ body{
     transform: translateY(-50%) translateX(-50%);
     left: 50%;
     position: absolute;
-    background-color:#B0C4DE;
+    background-color:rgba(255,255,255,0);
 }
 
 .chat-window-header{
@@ -39,9 +39,10 @@ body{
 
 .chat-screen{
 	width:500px;
-	height:400px;
-	background-color:white;
-	border: 1px solid #999;
+	height:500px;
+    background-image: url('https://i.pinimg.com/736x/83/9b/95/839b958e458bf7c8623356d6d953fd08--football-cakes-football-field.jpg');
+    background-size: 96%;
+	border: 1px solid rgba(56, 42, 42, 0.8);
 	padding: 10px;
     overflow-y: scroll;
 }
@@ -85,15 +86,21 @@ body{
 .orb{
 	position: absolute;
     top: 0px;
-    width: 200px;
+    width: 175px;
     left: 50%;
     transform: translateX(-50%);
+}
+.msg-row{
+    background-color: white;
+    padding: 3px;
+    border-radius: 10px;
+    margin-top: 5px;
 }
 
 #emoji{
 	position: absolute;
     top: 0px;
-    width: 130px;
+    width: 100px;
     left: 51%;
     top:50%;
     transform: translateX(-50%) translateY(-50%);
