--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,4 +1,11 @@
+#root {
+    font-weight: bold;
+}
 
+button{
+    height: 50px;
+    font-size: 20px;
+}
 .maincontainer::before {
     content: "";
     position: fixed;
@@ -11,7 +18,7 @@
     -moz-filter: blur(5px);
     -o-filter: blur(5px);
     -ms-filter: blur(5px);
-    filter: blur(5px);
+    filter: blur(8px);
     height: 100vh;
 }
 
@@ -29,15 +36,16 @@
 }
 
 .product{
-    height:100%;
-    border: solid 1px black
+    margin-top: 10px;
+    height:400px;
+    border: solid 1px black;
+    background: #ffffff99;
+    box-shadow: 10px 10px 5px grey;
 }   
-
-.container{
-    transform: translateY(100%);
-}
 
 .product-image{
     width: 30%;
-    height: 30%;
+    height:40%;
+    position: absolute;
+    bottom: 25px;
 }
